# Steamauto

./: .git-blame-ignore-revs  .gitignore  Buff-Bot.py  ConfigManager.py  FileUtils.py  LICENSE  README.md  Steamauto.py  build.spec  config.example.json  config.html  cookies.txt  get_uu_token.py  main.js  main.py  public.json  pyproject.toml  requirements.txt  ruff.toml  steamaccount.txt  versions.json
.github/ISSUE_TEMPLATE/: 其它内容.md  功能请求.md  报告bug.md
.github/scripts/: add_build_info.py  update_files.py  update_metadata.py
.github/workflows/: build-and-release-dev.yml  build-and-release.yml  clean.yml  dev-build.yml  generate_config_html.yml  release-new-version.yml
Apprise/: __init__.py  pushplus.py  server_chan.py
BuffApi/: __init__.py  models.py
PyC5Game/: __init__.py
PyECOSteam/: __init__.py  models.py
PyECOsteam/: __init__.py  models.py  sign.py
config/: config.example.json  config.example.json5  config.json  cookies.txt  steamaccount.json
libs/: FileUtils.py
pages/: _config.html  config.html
plugins/: BuffAutoAcceptOffer.py  BuffAutoComment.py  BuffAutoOnSale.py  BuffProfitReport.py  BuyPriceSync.py  C5AutoAcceptOffer.py  ECOSteam.py  ECOsteam.py  SteamAutoAcceptOffer.py  UUAutoAcceptOffer.py  UUAutoLease.py  UUAutoLeaseItem.py  UUAutoSell.py  UUAutoSellItem.py
protobufs/: __init__.py  enums_pb2.py  steammessages_base_pb2.py
protobufs/steammessages_auth/: steamclient_pb2.py
protobufs/steammessages_unified_base/: steamclient_pb2.py
scripts/: generate_config_html.py
steampy/: LICENSE.txt  README.txt  chat.py  client.py  confirmation.py  exceptions.py  guard.py  login.py  market.py  models.py  schemas.py  steam_error_codes.py  utils.py
utils/: ApiCrypt.py  BuffApiCrypt.py  UUApiCrypt.py  add_build_info.py  buff_helper.py  build_info.py  cloud_service.py  code_updater.py  config_manager.py  file_utils.py  logger.py  models.py  network_utils.py  notifier.py  old_version_patches.py  plugin_base.py  plugin_manager.py  static.py  steam_client.py  string_utils.py  tools.py  uu_helper.py
uuyoupinapi/: __init__.py  models.py
